# Carrington Core Changelog

# Develop

- (fix) Check for array type in any conditional expecting an array

## 3.7

- (feature) Add support for "sticky" posts (sticky.php, single-sticky.php, feed-sticky.php) in the post context
- (change) Set default context to archive instead of home
- (change) Requires WordPress 3.6 (for get_post() returning global $post)
- (fix) Properly load type-* templates in General context
- (fix) Output %Y as expected in admin settings for copyright field

## 3.4

- Remove Thickbox code (if your theme needs this, please include it in the theme).
- Remove color picker code (if your theme needs this, please include it in the theme).
- Remove archive/category posts per page default override (can be re-enabled by theme).
- Bring in expected globals in templates. Can be disabled via filter (`cfct_template_file_globals`) if desired.

## 3.3.1

- Update header code option name to match that used in wp_head filter

## 3.3

- Implemented support for feed-{post context} templates in content/ and excerpt/ dirs
- Refactor options display
- Add utility function to return template instead of echoing
- Converted Carrington Settings pages to utilize the WordPress Settings API
- Remove compatibility functions, no longer supporting versions of WordPress that old
- Misc. changes to support new WP APIs and best practices

## 3.1

- Updated some variable names
- Support for custom taxonomies within the general context
- Implemented checked and selected functions for options
- E_NOTICE clean
- Added PHP doc blocks
- Support for post formats in the single context
- Added support for custom post type archive pages in general context
- Relies on features in WordPress 3.1


## 3.0.1

- Added nonces to settings page
- Made title of settings page filterable
- Made menu item title filterable
- Support custom post types in AJAX archives
- Version # now tied to WP release # (this version, 3.0.1, released during WP 3.0)


## 3.0
